# serializer version: 1
# name: TestCreateOTU.test_autofill
  dict({
    'acronym': '',
    'excluded_accessions': list([
    ]),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': None,
    'taxid': 345184,
  })
# ---
# name: TestCreateOTU.test_empty_success
  dict({
    'acronym': '',
    'excluded_accessions': list([
    ]),
    'legacy_id': None,
    'name': 'Cabbage leaf curl Jamaica virus',
    'schema': None,
    'taxid': 345184,
  })
# ---
# name: TestUpdateOTU.test_success_no_exclusions
  list([
    dict({
      'acronym': '',
      'excluded_accessions': list([
      ]),
      'legacy_id': None,
      'name': 'Cabbage leaf curl Jamaica virus',
      'schema': None,
      'taxid': 345184,
    }),
  ])
# ---
